@@ -104,156 +104,80 @@ public class LibrawImage {
             Logger.getLogger(LibrawImage.class.getName()).log(Level.SEVERE, null, "Please call loadLibs as static method first!");
             throw new IllegalArgumentException("Please call loadLibs as static method first!");
         }
-        try ( var scope = Arena.ofShared()) {
-            if (operatingSystem.contains("WIN")) {
-                MemorySegment iprc = org.libraw.win.libraw_h.libraw_init(0);
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Memory dddress native lib was: " + iprc.get(ValueLayout.JAVA_LONG, 0));
-                //MemorySegment datasegment = org.libraw.win.libraw_data_t.idata(iprc);
-                MemorySegment params$slice = org.libraw.win.libraw_data_t.params(iprc);
+        try (var scope = Arena.ofShared()) {
+            MemorySegment iprc = org.libraw.nativ.libraw_h.libraw_init(0);
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Memory dddress native lib was: " + iprc.get(ValueLayout.JAVA_LONG, 0));
+            //MemorySegment datasegment = org.libraw.win.libraw_data_t.idata(iprc);
+            MemorySegment params$slice = org.libraw.nativ.libraw_data_t.params(iprc);
 
-                if (this.rawSettings == null) {
-                    this.rawSettings = new RawDecoderSettings();
-                }
-                new RawDecoderToNativeTranslator(rawSettings, operatingSystem).translate(params$slice);
-                /*org.libraw.win.libraw_output_params_t.use_camera_wb$set(params$slice, 0);
-                org.libraw.win.libraw_output_params_t.use_auto_wb$set(params$slice, 0);
-                org.libraw.win.libraw_output_params_t.output_tiff$set(params$slice, 0);
-                org.libraw.win.libraw_output_params_t.half_size$set(params$slice, 0);
-                org.libraw.win.libraw_output_params_t.user_qual$set(params$slice, 0);*/
-
-                MemorySegment inputStreamBytes = MemorySegment.ofArray(sourceFileAsByteArray);                
-                MemorySegment allocateNative = scope.allocateFrom(ValueLayout.JAVA_BYTE, sourceFileAsByteArray);//)Array(org.libraw.win.libraw_h.C_CHAR, sourceFileAsByteArray);
-                int k = org.libraw.win.libraw_h.libraw_open_buffer(iprc, allocateNative, inputStreamBytes.byteSize());
-                if (k > 0) {
-                    Logger.getLogger(LibrawImage.class.getName()).log(Level.SEVERE, null, "Cannot open stream, return value was: " + k);
-                    throw new IOException("Cannot open file stream!");
-                }
-
-                org.libraw.win.libraw_h.libraw_unpack(iprc);
-
-                MemorySegment iParams = org.libraw.win.libraw_h.libraw_get_iparams(iprc);
-                //MemorySegment iParamsRestricted = org.libraw.win.libraw_iparams_t.allocate(iParams);//.ofAddress(iParams, scope);
-                MemorySegment modelSlice = org.libraw.win.libraw_iparams_t.model(iParams);
-                cameraModel = new String(modelSlice.toArray(ValueLayout.JAVA_BYTE), StandardCharsets.US_ASCII);
-                MemorySegment image_other_data = org.libraw.win.libraw_h.libraw_get_imgother(iprc);
-                //MemorySegment imageOtherRestricted = org.libraw.win.libraw_imgother_t.ofAddress(image_other_data, scope);
-                long timestamp = org.libraw.win.libraw_imgother_t.timestamp(image_other_data);
-                shootingDateTime = LocalDateTime.ofInstant(Instant.ofEpochSecond(timestamp), TimeZone.getDefault().toZoneId());
-
-                org.libraw.win.libraw_h.libraw_dcraw_process(iprc);
-                ByteArrayOutputStream bo = new ByteArrayOutputStream();
-                
-                MemorySegment errorCode = scope.allocate(org.libraw.win.libraw_h.C_INT.byteSize());
-                MemorySegment mem_image_adr = org.libraw.win.libraw_h.libraw_dcraw_make_mem_image(iprc, errorCode);
-                //MemorySegment imageMemSegment = org.libraw.win.libraw_processed_image_t..ofAddress(mem_image_adr, scope);
-                MemorySegment data$slice = org.libraw.win.libraw_processed_image_t.data(mem_image_adr);
-                imageWidth = org.libraw.win.libraw_processed_image_t.width(mem_image_adr);
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Native width: " + imageWidth);
-                imageHeight = org.libraw.win.libraw_processed_image_t.height(mem_image_adr);
-                imageBits = org.libraw.win.libraw_processed_image_t.bits(mem_image_adr);
-                imageColors = org.libraw.win.libraw_processed_image_t.colors(mem_image_adr);
-
-                stride = imageWidth * imageColors * (imageBits / 8);
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Start reading image from native memory...");
-                byte[] line = new byte[stride];
-                for (var i = 0; i < imageHeight; i++) {
-                    loader.updateImageProgress(i, imageHeight);
-                    long offSetAdr=data$slice.address()+stride * i;
-                    MemorySegment asSegmentRestricted = MemorySegment.ofAddress(offSetAdr);
-                    line = asSegmentRestricted.reinterpret(stride).toArray(ValueLayout.JAVA_BYTE);
-                    try {
-                        bo.write(line);
-                    } catch (IOException ex) {
-                        Logger.getLogger(LibrawImage.class.getName()).log(Level.SEVERE, "Cannot retrieve image from native memory", ex);
-                        return null;
-                    }
-                }
-                bo.flush();
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Start reading image from native memory...finished");
-                byte[] data = bo.toByteArray();
-                bo.close();
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Freeing of native memory...");
-                org.libraw.win.libraw_h.libraw_dcraw_clear_mem(mem_image_adr);
-                mem_image_adr = null;
-                org.libraw.win.libraw_h.libraw_close(iprc);
-                iprc = null;
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Freeing of native memory...finished");
-                return data;
-            } else {
-                MemorySegment iprc = org.libraw.win.libraw_h.libraw_init(0);
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Memory dddress native lib was: " + iprc.get(ValueLayout.JAVA_LONG, 0));
-                //MemorySegment datasegment = org.libraw.win.libraw_data_t.idata(iprc);
-                MemorySegment params$slice = org.libraw.win.libraw_data_t.params(iprc);
-
-                if (this.rawSettings == null) {
-                    this.rawSettings = new RawDecoderSettings();
-                }
-                new RawDecoderToNativeTranslator(rawSettings, operatingSystem).translate(params$slice);
-                /*org.libraw.win.libraw_output_params_t.use_camera_wb$set(params$slice, 0);
-                org.libraw.win.libraw_output_params_t.use_auto_wb$set(params$slice, 0);
-                org.libraw.win.libraw_output_params_t.output_tiff$set(params$slice, 0);
-                org.libraw.win.libraw_output_params_t.half_size$set(params$slice, 0);
-                org.libraw.win.libraw_output_params_t.user_qual$set(params$slice, 0);*/
-
-                MemorySegment inputStreamBytes = MemorySegment.ofArray(sourceFileAsByteArray);                
-                MemorySegment allocateNative = scope.allocateFrom(ValueLayout.JAVA_BYTE, sourceFileAsByteArray);//)Array(org.libraw.win.libraw_h.C_CHAR, sourceFileAsByteArray);
-                int k = org.libraw.win.libraw_h.libraw_open_buffer(iprc, allocateNative, inputStreamBytes.byteSize());
-                if (k > 0) {
-                    Logger.getLogger(LibrawImage.class.getName()).log(Level.SEVERE, null, "Cannot open stream, return value was: " + k);
-                    throw new IOException("Cannot open file stream!");
-                }
-
-                org.libraw.win.libraw_h.libraw_unpack(iprc);
-
-                MemorySegment iParams = org.libraw.win.libraw_h.libraw_get_iparams(iprc);
-                //MemorySegment iParamsRestricted = org.libraw.win.libraw_iparams_t.allocate(iParams);//.ofAddress(iParams, scope);
-                MemorySegment modelSlice = org.libraw.win.libraw_iparams_t.model(iParams);
-                cameraModel = new String(modelSlice.toArray(ValueLayout.JAVA_BYTE), StandardCharsets.US_ASCII);
-                MemorySegment image_other_data = org.libraw.win.libraw_h.libraw_get_imgother(iprc);
-                //MemorySegment imageOtherRestricted = org.libraw.win.libraw_imgother_t.ofAddress(image_other_data, scope);
-                long timestamp = org.libraw.win.libraw_imgother_t.timestamp(image_other_data);
-                shootingDateTime = LocalDateTime.ofInstant(Instant.ofEpochSecond(timestamp), TimeZone.getDefault().toZoneId());
-
-                org.libraw.win.libraw_h.libraw_dcraw_process(iprc);
-                ByteArrayOutputStream bo = new ByteArrayOutputStream();
-                
-                MemorySegment errorCode = scope.allocate(org.libraw.win.libraw_h.C_INT.byteSize());
-                MemorySegment mem_image_adr = org.libraw.win.libraw_h.libraw_dcraw_make_mem_image(iprc, errorCode);
-                //MemorySegment imageMemSegment = org.libraw.win.libraw_processed_image_t..ofAddress(mem_image_adr, scope);
-                MemorySegment data$slice = org.libraw.win.libraw_processed_image_t.data(mem_image_adr);
-                imageWidth = org.libraw.win.libraw_processed_image_t.width(mem_image_adr);
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Native width: " + imageWidth);
-                imageHeight = org.libraw.win.libraw_processed_image_t.height(mem_image_adr);
-                imageBits = org.libraw.win.libraw_processed_image_t.bits(mem_image_adr);
-                imageColors = org.libraw.win.libraw_processed_image_t.colors(mem_image_adr);
-
-                stride = imageWidth * imageColors * (imageBits / 8);
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Start reading image from native memory...");
-                byte[] line = new byte[stride];
-                for (var i = 0; i < imageHeight; i++) {
-                    loader.updateImageProgress(i, imageHeight);
-                    long offSetAdr=data$slice.address()+stride * i;
-                    MemorySegment asSegmentRestricted = MemorySegment.ofAddress(offSetAdr);
-                    line = asSegmentRestricted.reinterpret(stride).toArray(ValueLayout.JAVA_BYTE);
-                    try {
-                        bo.write(line);
-                    } catch (IOException ex) {
-                        Logger.getLogger(LibrawImage.class.getName()).log(Level.SEVERE, "Cannot retrieve image from native memory", ex);
-                        return null;
-                    }
-                }
-                bo.flush();
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Start reading image from native memory...finished");
-                byte[] data = bo.toByteArray();
-                bo.close();
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Freeing of native memory...");
-                org.libraw.win.libraw_h.libraw_dcraw_clear_mem(mem_image_adr);
-                mem_image_adr = null;
-                org.libraw.win.libraw_h.libraw_close(iprc);
-                iprc = null;
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Freeing of native memory...finished");
-                return data;
+            if (this.rawSettings == null) {
+                this.rawSettings = new RawDecoderSettings();
             }
+            new RawDecoderToNativeTranslator(rawSettings, operatingSystem).translate(params$slice);
+            /*org.libraw.win.libraw_output_params_t.use_camera_wb$set(params$slice, 0);
+                org.libraw.win.libraw_output_params_t.use_auto_wb$set(params$slice, 0);
+                org.libraw.win.libraw_output_params_t.output_tiff$set(params$slice, 0);
+                org.libraw.win.libraw_output_params_t.half_size$set(params$slice, 0);
+                org.libraw.win.libraw_output_params_t.user_qual$set(params$slice, 0);*/
+
+            MemorySegment inputStreamBytes = MemorySegment.ofArray(sourceFileAsByteArray);
+            MemorySegment allocateNative = scope.allocateFrom(ValueLayout.JAVA_BYTE, sourceFileAsByteArray);//)Array(org.libraw.win.libraw_h.C_CHAR, sourceFileAsByteArray);
+            int k = org.libraw.nativ.libraw_h.libraw_open_buffer(iprc, allocateNative, inputStreamBytes.byteSize());
+            if (k > 0) {
+                Logger.getLogger(LibrawImage.class.getName()).log(Level.SEVERE, null, "Cannot open stream, return value was: " + k);
+                throw new IOException("Cannot open file stream!");
+            }
+
+            org.libraw.nativ.libraw_h.libraw_unpack(iprc);
+
+            MemorySegment iParams = org.libraw.nativ.libraw_h.libraw_get_iparams(iprc);
+            //MemorySegment iParamsRestricted = org.libraw.win.libraw_iparams_t.allocate(iParams);//.ofAddress(iParams, scope);
+            MemorySegment modelSlice = org.libraw.nativ.libraw_iparams_t.model(iParams);
+            cameraModel = new String(modelSlice.toArray(ValueLayout.JAVA_BYTE), StandardCharsets.US_ASCII);
+            MemorySegment image_other_data = org.libraw.nativ.libraw_h.libraw_get_imgother(iprc);
+            //MemorySegment imageOtherRestricted = org.libraw.win.libraw_imgother_t.ofAddress(image_other_data, scope);
+            long timestamp = org.libraw.nativ.libraw_imgother_t.timestamp(image_other_data);
+            shootingDateTime = LocalDateTime.ofInstant(Instant.ofEpochSecond(timestamp), TimeZone.getDefault().toZoneId());
+
+            org.libraw.nativ.libraw_h.libraw_dcraw_process(iprc);
+            ByteArrayOutputStream bo = new ByteArrayOutputStream();
+
+            MemorySegment errorCode = scope.allocate(org.libraw.nativ.libraw_h.C_INT.byteSize());
+            MemorySegment mem_image_adr = org.libraw.nativ.libraw_h.libraw_dcraw_make_mem_image(iprc, errorCode);
+            //MemorySegment imageMemSegment = org.libraw.win.libraw_processed_image_t..ofAddress(mem_image_adr, scope);
+            MemorySegment data$slice = org.libraw.nativ.libraw_processed_image_t.data(mem_image_adr);
+            imageWidth = org.libraw.nativ.libraw_processed_image_t.width(mem_image_adr);
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Native width: " + imageWidth);
+            imageHeight = org.libraw.nativ.libraw_processed_image_t.height(mem_image_adr);
+            imageBits = org.libraw.nativ.libraw_processed_image_t.bits(mem_image_adr);
+            imageColors = org.libraw.nativ.libraw_processed_image_t.colors(mem_image_adr);
+
+            stride = imageWidth * imageColors * (imageBits / 8);
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Start reading image from native memory...");
+            byte[] line = new byte[stride];
+            for (var i = 0; i < imageHeight; i++) {
+                loader.updateImageProgress(i, imageHeight);
+                long offSetAdr = data$slice.address() + stride * i;
+                MemorySegment asSegmentRestricted = MemorySegment.ofAddress(offSetAdr);
+                line = asSegmentRestricted.reinterpret(stride).toArray(ValueLayout.JAVA_BYTE);
+                try {
+                    bo.write(line);
+                } catch (IOException ex) {
+                    Logger.getLogger(LibrawImage.class.getName()).log(Level.SEVERE, "Cannot retrieve image from native memory", ex);
+                    return null;
+                }
+            }
+            bo.flush();
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Start reading image from native memory...finished");
+            byte[] data = bo.toByteArray();
+            bo.close();
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Freeing of native memory...");
+            org.libraw.nativ.libraw_h.libraw_dcraw_clear_mem(mem_image_adr);
+            mem_image_adr = null;
+            org.libraw.nativ.libraw_h.libraw_close(iprc);
+            iprc = null;
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Freeing of native memory...finished");
+            return data;
         }
     }
 
@@ -274,147 +198,76 @@ public class LibrawImage {
             throw new IllegalArgumentException("Please call loadLibs as static method first!");
         }
 
-        try ( var scope = Arena.ofShared()) {
-            if (operatingSystem.contains("WIN")) {
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Init native memory");
-                MemorySegment iprc = org.libraw.win.libraw_h.libraw_init(0);
-                
-                //MemorySegment datasegment = org.libraw.win.libraw_data_t.ofAddress(iprc, scope);
-                MemorySegment params$slice = org.libraw.win.libraw_data_t.params(iprc);
+        try (var scope = Arena.ofShared()) {
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Init native memory");
+            MemorySegment iprc = org.libraw.nativ.libraw_h.libraw_init(0);
 
-                if (this.rawSettings == null) {
-                    this.rawSettings = new RawDecoderSettings();
-                }
-                new RawDecoderToNativeTranslator(rawSettings, operatingSystem).translate(params$slice);
+            //MemorySegment datasegment = org.libraw.win.libraw_data_t.ofAddress(iprc, scope);
+            MemorySegment params$slice = org.libraw.nativ.libraw_data_t.params(iprc);
 
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Open file");
-                //int libraw_open_file = org.libraw.win.libraw_h.libraw_open_file(iprc, SegmentAllocator.nativeAllocator(scope).allocateUtf8String(imageFileURL));
-                int libraw_open_file = org.libraw.win.libraw_h.libraw_open_file(iprc,scope.allocateFrom(imageFileURL));
-                if (libraw_open_file > 0) {
-                    Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Cannot open file stream '" + imageFileURL + "'!" + libraw_open_file);
-                    throw new IOException("Cannot open file stream '" + imageFileURL + "'! " + libraw_open_file);
-                }
-
-                org.libraw.win.libraw_h.libraw_unpack(iprc);
-
-                MemorySegment iParams = org.libraw.win.libraw_h.libraw_get_iparams(iprc);
-                //MemorySegment iParamsRestricted = org.libraw.win.libraw_iparams_t.ofAddress(iParams, scope);
-                MemorySegment modelSlice = org.libraw.win.libraw_iparams_t.model(iParams);
-                cameraModel = new String(modelSlice.toArray(ValueLayout.JAVA_BYTE), StandardCharsets.UTF_8);
-                MemorySegment image_other_data = org.libraw.win.libraw_h.libraw_get_imgother(iprc);
-                //MemorySegment imageOtherRestricted = org.libraw.win.libraw_imgother_t.ofAddress(image_other_data, scope);
-                long timestamp = org.libraw.win.libraw_imgother_t.timestamp(image_other_data);
-                shootingDateTime = LocalDateTime.ofInstant(Instant.ofEpochSecond(timestamp), TimeZone.getDefault().toZoneId());
-
-                org.libraw.win.libraw_h.libraw_dcraw_process(iprc);
-
-                ByteArrayOutputStream bo = new ByteArrayOutputStream();
-
-                //MemorySegment errorCode = SegmentAllocator.nativeAllocator(scope).allocate(org.libraw.win.libraw_h.C_INT.byteSize());
-                MemorySegment errorCode = scope.allocate(org.libraw.win.libraw_h.C_INT.byteSize());
-                MemorySegment mem_image_adr = org.libraw.win.libraw_h.libraw_dcraw_make_mem_image(iprc, errorCode);
-                //MemorySegment imageMemSegment = org.libraw.win.libraw_processed_image_t.ofAddress(mem_image_adr, scope);
-                MemorySegment data$slice = org.libraw.win.libraw_processed_image_t.data(mem_image_adr);
-                imageWidth = org.libraw.win.libraw_processed_image_t.width(mem_image_adr);
-                imageHeight = org.libraw.win.libraw_processed_image_t.height(mem_image_adr);
-                imageBits = org.libraw.win.libraw_processed_image_t.bits(mem_image_adr);
-                imageColors = org.libraw.win.libraw_processed_image_t.colors(mem_image_adr);
-                //var num = imageWidth % 4;
-                stride = imageWidth * imageColors * (imageBits / 8);
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Reading image from native memory...");
-                byte[] line = new byte[stride];
-                for (var i = 0; i < imageHeight; i++) {
-                    long offSetAdr=data$slice.address()+stride * i;
-                    //MemorySegment asSegmentRestricted = MemorySegment.ofAddress(offSetAdr, stride, scope);                                        
-                    MemorySegment asSegmentRestricted = MemorySegment.ofAddress(offSetAdr);
-                    line = asSegmentRestricted.reinterpret(stride).toArray(ValueLayout.JAVA_BYTE);
-                    try {
-                        bo.write(line);
-                    } catch (IOException ex) {
-                        return null;
-                    }
-                }
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Reading image from native memory...finished");
-                byte[] rawBytes = bo.toByteArray();
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Convert rawtoINTBytes");
-                int[] raw = convertToINT(rawBytes);
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Releasing native memory...");
-                org.libraw.win.libraw_h.libraw_dcraw_clear_mem(mem_image_adr);
-                mem_image_adr = null;
-                org.libraw.win.libraw_h.libraw_close(iprc);
-                iprc = null;
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Releasing native memory...finished.");
-                return raw;
-            } else {
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Init native memory");
-                MemorySegment iprc = org.libraw.linuxosx.libraw_h.libraw_init(0);
-                //MemorySegment datasegment = org.libraw.linuxosx.libraw_data_t.ofAddress(iprc, scope);
-                MemorySegment params$slice = org.libraw.linuxosx.libraw_data_t.params(iprc);
-
-                if (this.rawSettings == null) {
-                    this.rawSettings = new RawDecoderSettings();
-                }
-                new RawDecoderToNativeTranslator(rawSettings, operatingSystem).translate(params$slice);
-
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Open file");
-                //int libraw_open_file = org.libraw.linuxosx.libraw_h.libraw_open_file(iprc, SegmentAllocator.nativeAllocator(scope).allocateUtf8String(imageFileURL).asReadOnly());                
-                int libraw_open_file = org.libraw.linuxosx.libraw_h.libraw_open_file(iprc, scope.allocateFrom(imageFileURL));
-                if (libraw_open_file > 0) {
-                    Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Cannot open file stream '" + imageFileURL + "'!" + libraw_open_file);
-                    throw new IOException("Cannot open file stream '" + imageFileURL + "'! " + libraw_open_file);
-                }
-
-                org.libraw.linuxosx.libraw_h.libraw_unpack(iprc);
-
-                MemorySegment iParams = org.libraw.linuxosx.libraw_h.libraw_get_iparams(iprc);
-                //MemorySegment iParamsRestricted = org.libraw.linuxosx.libraw_iparams_t.ofAddress(iParams, scope);
-                MemorySegment modelSlice = org.libraw.linuxosx.libraw_iparams_t.model(iParams);
-                cameraModel = new String(modelSlice.toArray(ValueLayout.JAVA_BYTE), StandardCharsets.UTF_8);
-                MemorySegment image_other_data = org.libraw.linuxosx.libraw_h.libraw_get_imgother(iprc);
-                //MemorySegment imageOtherRestricted = org.libraw.linuxosx.libraw_imgother_t.ofAddress(image_other_data, scope);
-                long timestamp = org.libraw.linuxosx.libraw_imgother_t.timestamp(image_other_data);
-                shootingDateTime = LocalDateTime.ofInstant(Instant.ofEpochSecond(timestamp), TimeZone.getDefault().toZoneId());
-
-                org.libraw.linuxosx.libraw_h.libraw_dcraw_process(iprc);
-
-                ByteArrayOutputStream bo = new ByteArrayOutputStream();
-
-                //MemorySegment errorCode = SegmentAllocator.nativeAllocator(scope).allocate(org.libraw.linuxosx.libraw_h.C_INT.byteSize());
-                MemorySegment errorCode = scope.allocate(org.libraw.linuxosx.libraw_h.C_INT.byteSize());
-                MemorySegment mem_image_adr = org.libraw.linuxosx.libraw_h.libraw_dcraw_make_mem_image(iprc, errorCode);
-                //MemorySegment imageMemSegment = org.libraw.linuxosx.libraw_processed_image_t.ofAddress(mem_image_adr, scope);
-                MemorySegment data$slice = org.libraw.linuxosx.libraw_processed_image_t.data(mem_image_adr);
-                imageWidth = org.libraw.linuxosx.libraw_processed_image_t.width(mem_image_adr);
-                imageHeight = org.libraw.linuxosx.libraw_processed_image_t.height(mem_image_adr);
-                imageBits = org.libraw.linuxosx.libraw_processed_image_t.bits(mem_image_adr);
-                imageColors = org.libraw.linuxosx.libraw_processed_image_t.colors(mem_image_adr);
-                //var num = imageWidth % 4;
-                stride = imageWidth * imageColors * (imageBits / 8);
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Reading image from native memory...");
-                byte[] line = new byte[stride];
-                for (var i = 0; i < imageHeight; i++) {
-                    long offSetAdr=data$slice.address()+stride * i;
-                    //MemorySegment asSegmentRestricted = MemorySegment.ofAddress(offSetAdr, stride, scope); 
-                    MemorySegment asSegmentRestricted = MemorySegment.ofAddress(offSetAdr);
-                    line = asSegmentRestricted.reinterpret(stride).toArray(ValueLayout.JAVA_BYTE);
-                    try {
-                        bo.write(line);
-                    } catch (IOException ex) {
-                        return null;
-                    }
-                }
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Reading image from native memory...finished");
-                byte[] rawBytes = bo.toByteArray();
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Convert rawtoINTBytes");
-                int[] raw = convertToINT(rawBytes);
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Releasing native memory...");
-                org.libraw.linuxosx.libraw_h.libraw_dcraw_clear_mem(mem_image_adr);
-                mem_image_adr = null;
-                org.libraw.linuxosx.libraw_h.libraw_close(iprc);
-                iprc = null;
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Releasing native memory...finished.");
-                return raw;
+            if (this.rawSettings == null) {
+                this.rawSettings = new RawDecoderSettings();
             }
+            new RawDecoderToNativeTranslator(rawSettings, operatingSystem).translate(params$slice);
+
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Open file");
+            //int libraw_open_file = org.libraw.win.libraw_h.libraw_open_file(iprc, SegmentAllocator.nativeAllocator(scope).allocateUtf8String(imageFileURL));
+            int libraw_open_file = org.libraw.nativ.libraw_h.libraw_open_file(iprc, scope.allocateFrom(imageFileURL));
+            if (libraw_open_file > 0) {
+                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Cannot open file stream '" + imageFileURL + "'!" + libraw_open_file);
+                throw new IOException("Cannot open file stream '" + imageFileURL + "'! " + libraw_open_file);
+            }
+
+            org.libraw.nativ.libraw_h.libraw_unpack(iprc);
+
+            MemorySegment iParams = org.libraw.nativ.libraw_h.libraw_get_iparams(iprc);
+            //MemorySegment iParamsRestricted = org.libraw.win.libraw_iparams_t.ofAddress(iParams, scope);
+            MemorySegment modelSlice = org.libraw.nativ.libraw_iparams_t.model(iParams);
+            cameraModel = new String(modelSlice.toArray(ValueLayout.JAVA_BYTE), StandardCharsets.UTF_8);
+            MemorySegment image_other_data = org.libraw.nativ.libraw_h.libraw_get_imgother(iprc);
+            //MemorySegment imageOtherRestricted = org.libraw.win.libraw_imgother_t.ofAddress(image_other_data, scope);
+            long timestamp = org.libraw.nativ.libraw_imgother_t.timestamp(image_other_data);
+            shootingDateTime = LocalDateTime.ofInstant(Instant.ofEpochSecond(timestamp), TimeZone.getDefault().toZoneId());
+
+            org.libraw.nativ.libraw_h.libraw_dcraw_process(iprc);
+
+            ByteArrayOutputStream bo = new ByteArrayOutputStream();
+
+            //MemorySegment errorCode = SegmentAllocator.nativeAllocator(scope).allocate(org.libraw.win.libraw_h.C_INT.byteSize());
+            MemorySegment errorCode = scope.allocate(org.libraw.nativ.libraw_h.C_INT.byteSize());
+            MemorySegment mem_image_adr = org.libraw.nativ.libraw_h.libraw_dcraw_make_mem_image(iprc, errorCode);
+            //MemorySegment imageMemSegment = org.libraw.win.libraw_processed_image_t.ofAddress(mem_image_adr, scope);
+            MemorySegment data$slice = org.libraw.nativ.libraw_processed_image_t.data(mem_image_adr);
+            imageWidth = org.libraw.nativ.libraw_processed_image_t.width(mem_image_adr);
+            imageHeight = org.libraw.nativ.libraw_processed_image_t.height(mem_image_adr);
+            imageBits = org.libraw.nativ.libraw_processed_image_t.bits(mem_image_adr);
+            imageColors = org.libraw.nativ.libraw_processed_image_t.colors(mem_image_adr);
+            //var num = imageWidth % 4;
+            stride = imageWidth * imageColors * (imageBits / 8);
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Reading image from native memory...");
+            byte[] line = new byte[stride];
+            for (var i = 0; i < imageHeight; i++) {
+                long offSetAdr = data$slice.address() + stride * i;
+                //MemorySegment asSegmentRestricted = MemorySegment.ofAddress(offSetAdr, stride, scope);                                        
+                MemorySegment asSegmentRestricted = MemorySegment.ofAddress(offSetAdr);
+                line = asSegmentRestricted.reinterpret(stride).toArray(ValueLayout.JAVA_BYTE);
+                try {
+                    bo.write(line);
+                } catch (IOException ex) {
+                    return null;
+                }
+            }
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Reading image from native memory...finished");
+            byte[] rawBytes = bo.toByteArray();
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Convert rawtoINTBytes");
+            int[] raw = convertToINT(rawBytes);
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Releasing native memory...");
+            org.libraw.nativ.libraw_h.libraw_dcraw_clear_mem(mem_image_adr);
+            mem_image_adr = null;
+            org.libraw.nativ.libraw_h.libraw_close(iprc);
+            iprc = null;
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Releasing native memory...finished.");
+            return raw;
         }
     }
 
@@ -452,232 +305,119 @@ public class LibrawImage {
             throw new IllegalArgumentException("Please call loadLibs as static method first!");
         }
         HashMap<String, String> retMap = new HashMap<>();
-        try ( var scope = Arena.ofShared()) {
-            if (operatingSystem.contains("WIN")) {
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Init native memory");
-                MemorySegment iprc = org.libraw.win.libraw_h.libraw_init(0);
-                //MemorySegment datasegment = org.libraw.win.libraw_data_t.ofAddress(iprc, scope);
+        try (var scope = Arena.ofShared()) {
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Init native memory");
+            MemorySegment iprc = org.libraw.nativ.libraw_h.libraw_init(0);
+            //MemorySegment datasegment = org.libraw.win.libraw_data_t.ofAddress(iprc, scope);
 
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Open file");
-                //int libraw_open_file = org.libraw.win.libraw_h.libraw_open_file(iprc, SegmentAllocator.nativeAllocator(scope).allocateUtf8String(imageFileURL));
-                int libraw_open_file = org.libraw.win.libraw_h.libraw_open_file(iprc, scope.allocateFrom(imageFileURL));
-                if (libraw_open_file > 0) {
-                    Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Cannot open file stream '" + imageFileURL + "'!" + libraw_open_file);
-                    throw new IOException("Cannot open file stream '" + imageFileURL + "'! " + libraw_open_file);
-                }
-
-                org.libraw.win.libraw_h.libraw_unpack(iprc);
-
-                MemorySegment iParams = org.libraw.win.libraw_h.libraw_get_iparams(iprc);
-                //MemorySegment iParamsRestricted = org.libraw.win.libraw_iparams_t.ofAddress(iParams, scope);
-                MemorySegment make$slice = org.libraw.win.libraw_iparams_t.make(iParams);
-                retMap.put("CameraMaker", make$slice.getString(0));
-                MemorySegment model$slice = org.libraw.win.libraw_iparams_t.model(iParams);
-                retMap.put("CameraModel", model$slice.getString(0));
-                MemorySegment xmpdata$get = org.libraw.win.libraw_iparams_t.xmpdata(iParams);
-                int xmplen$get = org.libraw.win.libraw_iparams_t.xmplen(iParams);
-                if (xmplen$get != 0) {
-                    //MemorySegment asSegmentRestricted = MemorySegment.allocateNative(xmplen$get, scope);
-                    MemorySegment asSegmentRestricted = MemorySegment.ofAddress(xmplen$get);
-                    retMap.put("XMP", asSegmentRestricted.getString(0));
-                }
-
-                MemorySegment image_other_data = org.libraw.win.libraw_h.libraw_get_imgother(iprc);
-                //MemorySegment imageOtherRestricted = org.libraw.win.libraw_imgother_t.ofAddress(image_other_data, scope);
-
-                MemorySegment gpsInfoSegement = org.libraw.win.libraw_imgother_t.parsed_gps(image_other_data);
-                float altitude$get = org.libraw.win.libraw_gps_info_t.altitude(gpsInfoSegement);
-                retMap.put("GPS Altitude", "" + altitude$get);
-                byte latref$get = org.libraw.win.libraw_gps_info_t.latref(gpsInfoSegement);
-                byte longref = org.libraw.win.libraw_gps_info_t.longref(gpsInfoSegement);
-                retMap.put("GPS Position", String.valueOf(latref$get) + ";" + String.valueOf(longref));
-                MemorySegment gpstime = org.libraw.win.libraw_gps_info_t.gpstimestamp(gpsInfoSegement);
-                retMap.put("GPS Time", gpstime.getString(0));
-
-                float aperture = org.libraw.win.libraw_imgother_t.aperture(image_other_data);
-                float focal_len = org.libraw.win.libraw_imgother_t.focal_len(image_other_data);
-                float isoSpeed = org.libraw.win.libraw_imgother_t.iso_speed(image_other_data);
-                float shutter = org.libraw.win.libraw_imgother_t.shutter(image_other_data);
-                long timestamp = org.libraw.win.libraw_imgother_t.timestamp(image_other_data);
-                retMap.put("CurFocal", "" + focal_len);
-                retMap.put("ISO speed", "" + isoSpeed);
-                retMap.put("shutter", "" + shutter);
-                retMap.put("Timestamp (EpocheSec)", "" + timestamp);
-
-                MemorySegment lens$slice = org.libraw.win.libraw_data_t.lens(iprc);
-                float EXIF_MaxAp$get = org.libraw.win.libraw_lensinfo_t.EXIF_MaxAp(lens$slice);
-                retMap.put("MaxAperture @CurFocal", "f/" + EXIF_MaxAp$get);
-                short FocalLengthIn35mmFormat$get = org.libraw.win.libraw_lensinfo_t.FocalLengthIn35mmFormat(lens$slice);
-                retMap.put("FocalLengthIn35mmFormat", "" + FocalLengthIn35mmFormat$get + " mm");
-                MemorySegment InternalLensSerial$slice = org.libraw.win.libraw_lensinfo_t.InternalLensSerial(lens$slice);
-                retMap.put("InternalLensSerial$slice", InternalLensSerial$slice.getString(0));
-                MemorySegment Lens$slice = org.libraw.win.libraw_lensinfo_t.Lens(lens$slice);
-                retMap.put("Lens", Lens$slice.getString(0));
-                MemorySegment LensMake$slice = org.libraw.win.libraw_lensinfo_t.LensMake(lens$slice);
-                retMap.put("LensMake", LensMake$slice.getString(0));
-                MemorySegment LensSerial$slice = org.libraw.win.libraw_lensinfo_t.LensSerial(lens$slice);
-                retMap.put("LensSerial$slice", LensSerial$slice.getString(0));
-                float MaxAp4MaxFocal$get = org.libraw.win.libraw_lensinfo_t.MaxAp4MaxFocal(lens$slice);
-                retMap.put("MaxAp @MaxFocal", "f/" + MaxAp4MaxFocal$get);
-                float MaxAp4MinFocal$get = org.libraw.win.libraw_lensinfo_t.MaxAp4MinFocal(lens$slice);
-                retMap.put("MaxAp @MinFocal", "f/" + MaxAp4MinFocal$get);
-                float MaxFocal$get = org.libraw.win.libraw_lensinfo_t.MaxFocal(lens$slice);
-                retMap.put("MaxFocal", "" + MaxFocal$get + " mm");
-                float MinFocal$get = org.libraw.win.libraw_lensinfo_t.MinFocal(lens$slice);
-                retMap.put("MinFocal", "" + MinFocal$get + " mm");
-                MemorySegment makernotes$slice = org.libraw.win.libraw_lensinfo_t.makernotes(lens$slice);
-                float CurFocal$get = org.libraw.win.libraw_makernotes_lens_t.CurFocal(makernotes$slice);
-                retMap.put("CurFocal", "" + CurFocal$get);
-                float CurAp$get = org.libraw.win.libraw_makernotes_lens_t.CurAp(makernotes$slice);
-                retMap.put("CurAperture", "" + CurAp$get);
-
-                MemorySegment shootingInfo$slice = org.libraw.win.libraw_data_t.shootinginfo(iprc);
-                short afPoint = org.libraw.win.libraw_shootinginfo_t.AFPoint(shootingInfo$slice);
-                retMap.put("AFPoint", "" + afPoint);
-                short driveMode = org.libraw.win.libraw_shootinginfo_t.DriveMode(shootingInfo$slice);
-                retMap.put("DriveMode", "" + driveMode);
-                short exposureMode = org.libraw.win.libraw_shootinginfo_t.ExposureMode(shootingInfo$slice);
-                retMap.put("ExposureMode", "" + exposureMode);
-                short exposureProgram = org.libraw.win.libraw_shootinginfo_t.ExposureProgram(shootingInfo$slice);
-                retMap.put("ExposureProgram", "" + exposureProgram);
-                short focusMode = org.libraw.win.libraw_shootinginfo_t.FocusMode(shootingInfo$slice);
-                retMap.put("FocusMode", "" + focusMode);
-                short imageStabiMode = org.libraw.win.libraw_shootinginfo_t.ImageStabilization(shootingInfo$slice);
-                retMap.put("ImageStabiMode", "" + imageStabiMode);
-                short medteringMode = org.libraw.win.libraw_shootinginfo_t.MeteringMode(shootingInfo$slice);
-                retMap.put("MedteringMode", "" + medteringMode);
-
-                imageHeight = (short) org.libraw.win.libraw_h.libraw_get_iheight(iprc);
-                imageWidth = (short) org.libraw.win.libraw_h.libraw_get_iwidth(iprc);
-                imageColors = (short) org.libraw.win.libraw_h.libraw_get_color_maximum(iprc);
-
-                org.libraw.win.libraw_h.libraw_close(iprc);
-                iprc = null;
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Releasing native memory...finished.");
-                retMap.put("ImageWidth", "" + imageWidth);
-                retMap.put("ImageHeight", "" + imageHeight);
-                retMap.put("ImageColors", "" + imageColors);
-                retMap.put("Aperture", "f/" + aperture);
-                retMap.put("Focal length", "" + focal_len + " mm");
-                retMap.put("ISO speed", "" + isoSpeed);
-                retMap.put("Shutter", "" + (1 / shutter));
-
-                return retMap;
-            } else {
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Init native memory");
-                MemorySegment iprc = org.libraw.linuxosx.libraw_h.libraw_init(0);
-                //MemorySegment datasegment = org.libraw.linuxosx.libraw_data_t.ofAddress(iprc, scope);
-
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Open file");
-                //int libraw_open_file = org.libraw.linuxosx.libraw_h.libraw_open_file(iprc, SegmentAllocator.nativeAllocator(scope).allocateUtf8String(imageFileURL));
-                int libraw_open_file = org.libraw.linuxosx.libraw_h.libraw_open_file(iprc,scope.allocateFrom(imageFileURL));
-                if (libraw_open_file > 0) {
-                    Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Cannot open file stream '" + imageFileURL + "'!" + libraw_open_file);
-                    throw new IOException("Cannot open file stream '" + imageFileURL + "'! " + libraw_open_file);
-                }
-
-                org.libraw.linuxosx.libraw_h.libraw_unpack(iprc);
-
-                MemorySegment iParams = org.libraw.linuxosx.libraw_h.libraw_get_iparams(iprc);
-                //MemorySegment iParamsRestricted = org.libraw.linuxosx.libraw_iparams_t.ofAddress(iParams, scope);
-                MemorySegment make$slice = org.libraw.linuxosx.libraw_iparams_t.make(iParams);
-                retMap.put("CameraMaker", make$slice.getString(0));
-                MemorySegment model$slice = org.libraw.linuxosx.libraw_iparams_t.model(iParams);
-                retMap.put("CameraModel", model$slice.getString(0));
-                MemorySegment xmpdata$get = org.libraw.linuxosx.libraw_iparams_t.xmpdata(iParams);
-                int xmplen$get = org.libraw.linuxosx.libraw_iparams_t.xmplen(iParams);
-                if (xmplen$get != 0) {
-                    //MemorySegment asSegmentRestricted = MemorySegment.allocateNative(xmplen$get, scope);
-                    MemorySegment asSegmentRestricted = MemorySegment.ofAddress(xmplen$get);
-                    retMap.put("XMP", asSegmentRestricted.getString(0));
-                }
-
-                MemorySegment image_other_data = org.libraw.linuxosx.libraw_h.libraw_get_imgother(iprc);
-                //MemorySegment imageOtherRestricted = org.libraw.linuxosx.libraw_imgother_t.ofAddress(image_other_data, scope);
-
-                MemorySegment gpsInfoSegement = org.libraw.linuxosx.libraw_imgother_t.parsed_gps(image_other_data);
-                float altitude$get = org.libraw.linuxosx.libraw_gps_info_t.altitude(gpsInfoSegement);
-                retMap.put("GPS Altitude", "" + altitude$get);
-                byte latref$get = org.libraw.linuxosx.libraw_gps_info_t.latref(gpsInfoSegement);
-                byte longref = org.libraw.linuxosx.libraw_gps_info_t.longref(gpsInfoSegement);
-                retMap.put("GPS Position", String.valueOf(latref$get) + ";" + String.valueOf(longref));
-                MemorySegment gpstime = org.libraw.linuxosx.libraw_gps_info_t.gpstimestamp(gpsInfoSegement);
-                retMap.put("GPS Time", gpstime.getString(0));
-
-                float aperture = org.libraw.linuxosx.libraw_imgother_t.aperture(image_other_data);
-                float focal_len = org.libraw.linuxosx.libraw_imgother_t.focal_len(image_other_data);
-                float isoSpeed = org.libraw.linuxosx.libraw_imgother_t.iso_speed(image_other_data);
-                float shutter = org.libraw.linuxosx.libraw_imgother_t.shutter(image_other_data);
-                long timestamp = org.libraw.linuxosx.libraw_imgother_t.timestamp(image_other_data);
-                retMap.put("CurFocal", "" + focal_len);
-                retMap.put("ISO speed", "" + isoSpeed);
-                retMap.put("shutter", "" + shutter);
-                retMap.put("Timestamp (EpocheSec)", "" + timestamp);
-
-                MemorySegment lens$slice = org.libraw.linuxosx.libraw_data_t.lens(iprc);
-                float EXIF_MaxAp$get = org.libraw.linuxosx.libraw_lensinfo_t.EXIF_MaxAp(lens$slice);
-                retMap.put("MaxAperture @CurFocal", "f/" + EXIF_MaxAp$get);
-                short FocalLengthIn35mmFormat$get = org.libraw.linuxosx.libraw_lensinfo_t.FocalLengthIn35mmFormat(lens$slice);
-                retMap.put("FocalLengthIn35mmFormat", "" + FocalLengthIn35mmFormat$get + " mm");
-                MemorySegment InternalLensSerial$slice = org.libraw.linuxosx.libraw_lensinfo_t.InternalLensSerial(lens$slice);
-                retMap.put("InternalLensSerial$slice", InternalLensSerial$slice.toString());
-                MemorySegment Lens$slice = org.libraw.linuxosx.libraw_lensinfo_t.Lens(lens$slice);
-                retMap.put("Lens", Lens$slice.toString());
-                MemorySegment LensMake$slice = org.libraw.linuxosx.libraw_lensinfo_t.LensMake(lens$slice);
-                retMap.put("LensMake", LensMake$slice.getString(0));
-                MemorySegment LensSerial$slice = org.libraw.linuxosx.libraw_lensinfo_t.LensSerial(lens$slice);
-                retMap.put("LensSerial$slice", LensSerial$slice.getString(0));
-                float MaxAp4MaxFocal$get = org.libraw.linuxosx.libraw_lensinfo_t.MaxAp4MaxFocal(lens$slice);
-                retMap.put("MaxAp @MaxFocal", "f/" + MaxAp4MaxFocal$get);
-                float MaxAp4MinFocal$get = org.libraw.linuxosx.libraw_lensinfo_t.MaxAp4MinFocal(lens$slice);
-                retMap.put("MaxAp @MinFocal", "f/" + MaxAp4MinFocal$get);
-                float MaxFocal$get = org.libraw.linuxosx.libraw_lensinfo_t.MaxFocal(lens$slice);
-                retMap.put("MaxFocal", "" + MaxFocal$get + " mm");
-                float MinFocal$get = org.libraw.linuxosx.libraw_lensinfo_t.MinFocal(lens$slice);
-                retMap.put("MinFocal", "" + MinFocal$get + " mm");
-                MemorySegment makernotes$slice = org.libraw.linuxosx.libraw_lensinfo_t.makernotes(lens$slice);
-                float CurFocal$get = org.libraw.linuxosx.libraw_makernotes_lens_t.CurFocal(makernotes$slice);
-                retMap.put("CurFocal", "" + CurFocal$get);
-                float CurAp$get = org.libraw.linuxosx.libraw_makernotes_lens_t.CurAp(makernotes$slice);
-                retMap.put("CurAperture", "" + CurAp$get);
-
-                MemorySegment shootingInfo$slice = org.libraw.linuxosx.libraw_data_t.shootinginfo(iprc);
-                short afPoint = org.libraw.linuxosx.libraw_shootinginfo_t.AFPoint(shootingInfo$slice);
-                retMap.put("AFPoint", "" + afPoint);
-                short driveMode = org.libraw.linuxosx.libraw_shootinginfo_t.DriveMode(shootingInfo$slice);
-                retMap.put("DriveMode", "" + driveMode);
-                short exposureMode = org.libraw.linuxosx.libraw_shootinginfo_t.ExposureMode(shootingInfo$slice);
-                retMap.put("ExposureMode", "" + exposureMode);
-                short exposureProgram = org.libraw.linuxosx.libraw_shootinginfo_t.ExposureProgram(shootingInfo$slice);
-                retMap.put("ExposureProgram", "" + exposureProgram);
-                short focusMode = org.libraw.linuxosx.libraw_shootinginfo_t.FocusMode(shootingInfo$slice);
-                retMap.put("FocusMode", "" + focusMode);
-                short imageStabiMode = org.libraw.linuxosx.libraw_shootinginfo_t.ImageStabilization(shootingInfo$slice);
-                retMap.put("ImageStabiMode", "" + imageStabiMode);
-                short medteringMode = org.libraw.linuxosx.libraw_shootinginfo_t.MeteringMode(shootingInfo$slice);
-                retMap.put("MedteringMode", "" + medteringMode);
-
-                imageHeight = (short) org.libraw.linuxosx.libraw_h.libraw_get_iheight(iprc);
-                imageWidth = (short) org.libraw.linuxosx.libraw_h.libraw_get_iwidth(iprc);
-                imageColors = (short) org.libraw.linuxosx.libraw_h.libraw_get_color_maximum(iprc);
-
-                org.libraw.linuxosx.libraw_h.libraw_close(iprc);
-                iprc = null;
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Releasing native memory...finished.");
-                retMap.put("ImageWidth", "" + imageWidth);
-                retMap.put("ImageHeight", "" + imageHeight);
-                retMap.put("ImageColors", "" + imageColors);
-                retMap.put("Aperture", "f/" + aperture);
-                retMap.put("Focal length", "" + focal_len + " mm");
-                retMap.put("ISO speed", "" + isoSpeed);
-                retMap.put("Shutter", "" + (1 / shutter));
-
-                return retMap;
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Open file");
+            //int libraw_open_file = org.libraw.win.libraw_h.libraw_open_file(iprc, SegmentAllocator.nativeAllocator(scope).allocateUtf8String(imageFileURL));
+            int libraw_open_file = org.libraw.nativ.libraw_h.libraw_open_file(iprc, scope.allocateFrom(imageFileURL));
+            if (libraw_open_file > 0) {
+                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Cannot open file stream '" + imageFileURL + "'!" + libraw_open_file);
+                throw new IOException("Cannot open file stream '" + imageFileURL + "'! " + libraw_open_file);
             }
+
+            org.libraw.nativ.libraw_h.libraw_unpack(iprc);
+
+            MemorySegment iParams = org.libraw.nativ.libraw_h.libraw_get_iparams(iprc);
+            //MemorySegment iParamsRestricted = org.libraw.win.libraw_iparams_t.ofAddress(iParams, scope);
+            MemorySegment make$slice = org.libraw.nativ.libraw_iparams_t.make(iParams);
+            retMap.put("CameraMaker", make$slice.getString(0));
+            MemorySegment model$slice = org.libraw.nativ.libraw_iparams_t.model(iParams);
+            retMap.put("CameraModel", model$slice.getString(0));
+            MemorySegment xmpdata$get = org.libraw.nativ.libraw_iparams_t.xmpdata(iParams);
+            int xmplen$get = org.libraw.nativ.libraw_iparams_t.xmplen(iParams);
+            if (xmplen$get != 0) {
+                //MemorySegment asSegmentRestricted = MemorySegment.allocateNative(xmplen$get, scope);
+                MemorySegment asSegmentRestricted = MemorySegment.ofAddress(xmplen$get);
+                retMap.put("XMP", asSegmentRestricted.getString(0));
+            }
+
+            MemorySegment image_other_data = org.libraw.nativ.libraw_h.libraw_get_imgother(iprc);
+            //MemorySegment imageOtherRestricted = org.libraw.win.libraw_imgother_t.ofAddress(image_other_data, scope);
+
+            MemorySegment gpsInfoSegement = org.libraw.nativ.libraw_imgother_t.parsed_gps(image_other_data);
+            float altitude$get = org.libraw.nativ.libraw_gps_info_t.altitude(gpsInfoSegement);
+            retMap.put("GPS Altitude", "" + altitude$get);
+            byte latref$get = org.libraw.nativ.libraw_gps_info_t.latref(gpsInfoSegement);
+            byte longref = org.libraw.nativ.libraw_gps_info_t.longref(gpsInfoSegement);
+            retMap.put("GPS Position", String.valueOf(latref$get) + ";" + String.valueOf(longref));
+            MemorySegment gpstime = org.libraw.nativ.libraw_gps_info_t.gpstimestamp(gpsInfoSegement);
+            retMap.put("GPS Time", gpstime.getString(0));
+
+            float aperture = org.libraw.nativ.libraw_imgother_t.aperture(image_other_data);
+            float focal_len = org.libraw.nativ.libraw_imgother_t.focal_len(image_other_data);
+            float isoSpeed = org.libraw.nativ.libraw_imgother_t.iso_speed(image_other_data);
+            float shutter = org.libraw.nativ.libraw_imgother_t.shutter(image_other_data);
+            long timestamp = org.libraw.nativ.libraw_imgother_t.timestamp(image_other_data);
+            retMap.put("CurFocal", "" + focal_len);
+            retMap.put("ISO speed", "" + isoSpeed);
+            retMap.put("shutter", "" + shutter);
+            retMap.put("Timestamp (EpocheSec)", "" + timestamp);
+
+            MemorySegment lens$slice = org.libraw.nativ.libraw_data_t.lens(iprc);
+            float EXIF_MaxAp$get = org.libraw.nativ.libraw_lensinfo_t.EXIF_MaxAp(lens$slice);
+            retMap.put("MaxAperture @CurFocal", "f/" + EXIF_MaxAp$get);
+            short FocalLengthIn35mmFormat$get = org.libraw.nativ.libraw_lensinfo_t.FocalLengthIn35mmFormat(lens$slice);
+            retMap.put("FocalLengthIn35mmFormat", "" + FocalLengthIn35mmFormat$get + " mm");
+            MemorySegment InternalLensSerial$slice = org.libraw.nativ.libraw_lensinfo_t.InternalLensSerial(lens$slice);
+            retMap.put("InternalLensSerial$slice", InternalLensSerial$slice.getString(0));
+            MemorySegment Lens$slice = org.libraw.nativ.libraw_lensinfo_t.Lens(lens$slice);
+            retMap.put("Lens", Lens$slice.getString(0));
+            MemorySegment LensMake$slice = org.libraw.nativ.libraw_lensinfo_t.LensMake(lens$slice);
+            retMap.put("LensMake", LensMake$slice.getString(0));
+            MemorySegment LensSerial$slice = org.libraw.nativ.libraw_lensinfo_t.LensSerial(lens$slice);
+            retMap.put("LensSerial$slice", LensSerial$slice.getString(0));
+            float MaxAp4MaxFocal$get = org.libraw.nativ.libraw_lensinfo_t.MaxAp4MaxFocal(lens$slice);
+            retMap.put("MaxAp @MaxFocal", "f/" + MaxAp4MaxFocal$get);
+            float MaxAp4MinFocal$get = org.libraw.nativ.libraw_lensinfo_t.MaxAp4MinFocal(lens$slice);
+            retMap.put("MaxAp @MinFocal", "f/" + MaxAp4MinFocal$get);
+            float MaxFocal$get = org.libraw.nativ.libraw_lensinfo_t.MaxFocal(lens$slice);
+            retMap.put("MaxFocal", "" + MaxFocal$get + " mm");
+            float MinFocal$get = org.libraw.nativ.libraw_lensinfo_t.MinFocal(lens$slice);
+            retMap.put("MinFocal", "" + MinFocal$get + " mm");
+            MemorySegment makernotes$slice = org.libraw.nativ.libraw_lensinfo_t.makernotes(lens$slice);
+            float CurFocal$get = org.libraw.nativ.libraw_makernotes_lens_t.CurFocal(makernotes$slice);
+            retMap.put("CurFocal", "" + CurFocal$get);
+            float CurAp$get = org.libraw.nativ.libraw_makernotes_lens_t.CurAp(makernotes$slice);
+            retMap.put("CurAperture", "" + CurAp$get);
+
+            MemorySegment shootingInfo$slice = org.libraw.nativ.libraw_data_t.shootinginfo(iprc);
+            short afPoint = org.libraw.nativ.libraw_shootinginfo_t.AFPoint(shootingInfo$slice);
+            retMap.put("AFPoint", "" + afPoint);
+            short driveMode = org.libraw.nativ.libraw_shootinginfo_t.DriveMode(shootingInfo$slice);
+            retMap.put("DriveMode", "" + driveMode);
+            short exposureMode = org.libraw.nativ.libraw_shootinginfo_t.ExposureMode(shootingInfo$slice);
+            retMap.put("ExposureMode", "" + exposureMode);
+            short exposureProgram = org.libraw.nativ.libraw_shootinginfo_t.ExposureProgram(shootingInfo$slice);
+            retMap.put("ExposureProgram", "" + exposureProgram);
+            short focusMode = org.libraw.nativ.libraw_shootinginfo_t.FocusMode(shootingInfo$slice);
+            retMap.put("FocusMode", "" + focusMode);
+            short imageStabiMode = org.libraw.nativ.libraw_shootinginfo_t.ImageStabilization(shootingInfo$slice);
+            retMap.put("ImageStabiMode", "" + imageStabiMode);
+            short medteringMode = org.libraw.nativ.libraw_shootinginfo_t.MeteringMode(shootingInfo$slice);
+            retMap.put("MedteringMode", "" + medteringMode);
+
+            imageHeight = (short) org.libraw.nativ.libraw_h.libraw_get_iheight(iprc);
+            imageWidth = (short) org.libraw.nativ.libraw_h.libraw_get_iwidth(iprc);
+            imageColors = (short) org.libraw.nativ.libraw_h.libraw_get_color_maximum(iprc);
+
+            org.libraw.nativ.libraw_h.libraw_close(iprc);
+            iprc = null;
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Releasing native memory...finished.");
+            retMap.put("ImageWidth", "" + imageWidth);
+            retMap.put("ImageHeight", "" + imageHeight);
+            retMap.put("ImageColors", "" + imageColors);
+            retMap.put("Aperture", "f/" + aperture);
+            retMap.put("Focal length", "" + focal_len + " mm");
+            retMap.put("ISO speed", "" + isoSpeed);
+            retMap.put("Shutter", "" + (1 / shutter));
+
+            return retMap;
         }
     }
-    
-    
+
     public String getCameraMaker() throws IOException {
         String retString;
         if (imageFileURL == null) {
@@ -687,61 +427,33 @@ public class LibrawImage {
         if (loadLibraryFromJar == null) {
             Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Please call loadLibs as static method first!");
             throw new IllegalArgumentException("Please call loadLibs as static method first!");
-        }        
-        try ( var scope = Arena.ofShared()) {
-            if (operatingSystem.contains("WIN")) {
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Init native memory");
-                MemorySegment iprc = org.libraw.win.libraw_h.libraw_init(0);                
+        }
+        try (var scope = Arena.ofShared()) {
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Init native memory");
+            MemorySegment iprc = org.libraw.nativ.libraw_h.libraw_init(0);
 
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Open file");
-                //int libraw_open_file = org.libraw.win.libraw_h.libraw_open_file(iprc, SegmentAllocator.nativeAllocator(scope).allocateUtf8String(imageFileURL));
-                int libraw_open_file = org.libraw.win.libraw_h.libraw_open_file(iprc, scope.allocateFrom(imageFileURL));
-                if (libraw_open_file > 0) {
-                    Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Cannot open file stream '" + imageFileURL + "'!" + libraw_open_file);
-                    throw new IOException("Cannot open file stream '" + imageFileURL + "'! " + libraw_open_file);
-                }
-
-                org.libraw.win.libraw_h.libraw_unpack(iprc);
-
-                MemorySegment iParams = org.libraw.win.libraw_h.libraw_get_iparams(iprc);
-                //MemorySegment iParamsRestricted = org.libraw.win.libraw_iparams_t.ofAddress(iParams, scope);
-                MemorySegment make$slice = org.libraw.win.libraw_iparams_t.make(iParams);                
-                retString=make$slice.getString(0);
-                MemorySegment model$slice = org.libraw.win.libraw_iparams_t.model(iParams);                
-                retString=retString+model$slice.getString(0);                
-
-                org.libraw.win.libraw_h.libraw_close(iprc);
-                iprc = null;
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Releasing native memory...finished.");
-                
-                return retString;
-            } else {                
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Init native memory");
-                MemorySegment iprc = org.libraw.linuxosx.libraw_h.libraw_init(0);                
-
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Open file");
-                //int libraw_open_file = org.libraw.linuxosx.libraw_h.libraw_open_file(iprc, SegmentAllocator.nativeAllocator(scope).allocateUtf8String(imageFileURL));
-                int libraw_open_file = org.libraw.linuxosx.libraw_h.libraw_open_file(iprc, scope.allocateFrom(imageFileURL));
-                if (libraw_open_file > 0) {
-                    Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Cannot open file stream '" + imageFileURL + "'!" + libraw_open_file);
-                    throw new IOException("Cannot open file stream '" + imageFileURL + "'! " + libraw_open_file);
-                }
-
-                org.libraw.linuxosx.libraw_h.libraw_unpack(iprc);
-
-                MemorySegment iParams = org.libraw.linuxosx.libraw_h.libraw_get_iparams(iprc);
-                //MemorySegment iParamsRestricted = org.libraw.linuxosx.libraw_iparams_t.ofAddress(iParams, scope);
-                MemorySegment make$slice = org.libraw.linuxosx.libraw_iparams_t.make(iParams);                
-                retString=make$slice.getString(0);
-                MemorySegment model$slice = org.libraw.linuxosx.libraw_iparams_t.model(iParams);                
-                retString=retString+model$slice.getString(0);                
-
-                org.libraw.linuxosx.libraw_h.libraw_close(iprc);
-                iprc = null;
-                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Releasing native memory...finished.");
-                
-                return retString;
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Open file");
+            //int libraw_open_file = org.libraw.win.libraw_h.libraw_open_file(iprc, SegmentAllocator.nativeAllocator(scope).allocateUtf8String(imageFileURL));
+            int libraw_open_file = org.libraw.nativ.libraw_h.libraw_open_file(iprc, scope.allocateFrom(imageFileURL));
+            if (libraw_open_file > 0) {
+                Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Cannot open file stream '" + imageFileURL + "'!" + libraw_open_file);
+                throw new IOException("Cannot open file stream '" + imageFileURL + "'! " + libraw_open_file);
             }
+
+            org.libraw.nativ.libraw_h.libraw_unpack(iprc);
+
+            MemorySegment iParams = org.libraw.nativ.libraw_h.libraw_get_iparams(iprc);
+            //MemorySegment iParamsRestricted = org.libraw.win.libraw_iparams_t.ofAddress(iParams, scope);
+            MemorySegment make$slice = org.libraw.nativ.libraw_iparams_t.make(iParams);
+            retString = make$slice.getString(0);
+            MemorySegment model$slice = org.libraw.nativ.libraw_iparams_t.model(iParams);
+            retString = retString + model$slice.getString(0);
+
+            org.libraw.nativ.libraw_h.libraw_close(iprc);
+            iprc = null;
+            Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Releasing native memory...finished.");
+
+            return retString;
         }
     }
 
@@ -822,6 +534,7 @@ public class LibrawImage {
 
     /**
      * getting the actual setting for the raw decoder engine
+     *
      * @return the settings object with all settings applied
      */
     public RawDecoderSettings getRawSettings() {
@@ -829,8 +542,10 @@ public class LibrawImage {
     }
 
     /**
-     * Optional settings for the raw decoding engine. If not set than basis engine properties are applied. 
-     * This must be called before any loading of images
+     * Optional settings for the raw decoding engine. If not set than basis
+     * engine properties are applied. This must be called before any loading of
+     * images
+     *
      * @param rawSettings the settings object to be set.
      */
     public void setRawSettings(RawDecoderSettings rawSettings) {
@@ -845,7 +560,6 @@ public class LibrawImage {
     @Override
     public String toString() {
         return "LibrawImage{" + "imageFileURL=" + imageFileURL + ", imageWidth=" + imageWidth + ", imageHeight=" + imageHeight + ", imageBits=" + imageBits + ", imageColors=" + imageColors + ", stride=" + stride + ", loader=" + loader + ", cameraModel=" + cameraModel + ", shootingDateTime=" + shootingDateTime + ", rawSettings=" + rawSettings + '}';
-    }    
-    
+    }
 
 }
